--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TimeGame</title>
-    <link rel="shortcut icon" href="img/clock_icon.png">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=yes">
+	<title>Time Game</title>
+	<link rel="shortcut icon" href="img/clock_icon.png">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 </head>
 <body>
     <div id="app"></div>
-    <script src="js/out.js"></script>
+    <script type="text/javascript" src="js/out.js"></script>
 </body>
 </html>
